--- a/djangoproject/djangoapp/templates/login.html
+++ b/djangoproject/djangoapp/templates/login.html
@@ -9,6 +9,8 @@
     <!-- {{data}} -->
      <form action="" method="post">
         {% csrf_token %}
+        {{data}}
+
         <input type="submit" value="submit">
      </form>
 </body>
