--- a/djangoproject/djangoapp/templates/edit.html
+++ b/djangoproject/djangoapp/templates/edit.html
@@ -6,11 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/update_log/{{ data.id }}" method="POST">
+    <form action="/update_log/{{ data.id }}/" method="POST">
         {% csrf_token %}
-        <input type="text" name="name"  value="{{data.name}}">
-        <input type="text" value="{{data.course}}">
-        <input type="number" value="{{data.salary}}">
+        <input type="text" name="name" id="" value="{{data.name}}">
+        <input type="text" name="course" id="" value="{{data.course}}">
+        <input type="number" name="salary" id="" value="{{data.salary}}">
         <input type="submit" value="update">
 
 
