mail sending in django

--- a/djangoproject/djangoapp/templates/editpage.html
+++ b/djangoproject/djangoapp/templates/editpage.html
@@ -8,11 +8,11 @@
 <body>
     <form action="" method="POST">
         {% csrf_token %}
-        {% for i in data %}
-            <h1>Welcome,{{i.username}}</h1>
-        {% endfor %}
+        
+            <h1>Welcome,{{data}}</h1>
+    
 
-            <a href="/login/">Logout</a><br>
+            <a href="/home/">Logout</a><br>
             <a href="/home/">Home</a>
       
 
