--- a/djangoproject/djangoapp/templates/third.html
+++ b/djangoproject/djangoapp/templates/third.html
@@ -6,14 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="" method="POST">
-        <a href="\login\">Login</a>
-        <a href="\logout\">Logout</a>
-        <a href="\editin\">Edit</a>
+    <h1>helooooooooooo</h1>
 
-
-
-
-    </form>
 </body>
 </html>
