--- a/djangoproject/djangoapp/templates/house.html
+++ b/djangoproject/djangoapp/templates/house.html
@@ -9,11 +9,8 @@
 
   <form action="" method="POST">
     {% csrf_token %}
-    <input type="text" placeholder="name">
-    <input type="text" placeholder="place">
-    <input type="number" placeholder="age">
-
-
+    {{data.as_p}}
+    <button type="submit">submit</button>
 
   </form>
 </body>
