--- a/djangoproject/djangoapp/templates/img.html
+++ b/djangoproject/djangoapp/templates/img.html
@@ -6,22 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-<table>
-    <tr>
-        <td>Image </td>
-        <td>Phone</td>
-        <td>delete</td>
-        <td>edit </td>
-    </tr>
-    {% for i in data %}
-    <tr>
-        <td><img src="{{i.image_lawn.url }}" alt="{{here}}" width="200px"></td>
-        <td>{{i.phone}}</td>
-        <td><a href="deleteimage/{{i.id}}">delete</a></td>
-        <td><a href="editimage/{{i.id}}">edit</a></td>
+<form action="" method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    <input type="file" name="images" id=""><br>
+    <input type="number" name="phone" id=""><br>
+    <input type="submit" value="submit">
 
-    </tr>
-    {% endfor %}
-</table>
+</form>
 </body>
 </html>
