task using django

--- a/djangoproject/djangoapp/templates/editpage.html
+++ b/djangoproject/djangoapp/templates/editpage.html
@@ -12,7 +12,7 @@
             <h1>Welcome,{{data}}</h1>
     
 
-            <a href="/home/">Logout</a><br>
+            <a href="/logout/">Logout</a><br>
             <a href="/home/">Home</a>
       
 
