--- a/djangoproject/djangoapp/templates/home.html
+++ b/djangoproject/djangoapp/templates/home.html
@@ -9,7 +9,7 @@
     <form action="" method="POST">
         <a href="\login\">Login</a>
         <a href="\logout\">Logout</a>
-        <a href="\editin\">Edit</a>
+        <a href="\edit\">Edit</a>
 
 
 
